# metashell

./: .travis.yml  CMakeLists.txt  build.sh
3rd/templight/: revision.txt
app/: CMakeLists.txt
app/metashell/: CMakeLists.txt
app/reference_gen/: CMakeLists.txt
cmake/Modules/: Compiler.cmake
docs/reference/: mdb_commands.md
include/just/: test.hpp
include/metashell/: cached.hpp  canonical_path.hpp  clang_revision.hpp  disable_precompiled_header_guard.hpp  forward_trace_iterator.hpp  mdb_be_base.hpp  mdb_command.hpp  mdb_command_handler_map.hpp  mdb_command_parser.hpp  mdb_shell.hpp  mdb_templight_be.hpp  metaprogram.hpp  rapid_handler.hpp  rapid_shell_config_parser.hpp  unique.hpp  wave_hooks.hpp
lib/: mdb_be_base.cpp  mdb_shell.cpp  mdb_templight_be.cpp  pragma_mdb.cpp  readline_mdb_shell.cpp
lib/compiler_stub/: CMakeLists.txt
lib/core/: CMakeLists.txt  breakpoint.cpp  canonical_path.cpp  clang_binary.cpp  code_completer_clang.cpp  command_processor_queue.cpp  default_environment_detector.cpp  disable_precompiled_header_guard.cpp  engine_null.cpp  engine_vc.cpp  extra_sysinclude.hpp  header_discoverer_vc.cpp  header_file_environment.cpp  includes_cache.cpp  input_loop.cpp  mdb_command_handler_map.cpp  mdb_command_parser.cpp  mdb_shell.cpp  metaprogram.cpp  metaprogram_builder.cpp  parse_config.cpp  parse_wave_config.cpp  pragma_config.cpp  pragma_config_load.cpp  pragma_handler_map.cpp  shell.cpp  (+9 more)
lib/pch/: CMakeLists.txt
lib/pch/include/metashell/pch/: pch.hpp
test/: mdb_fixture.cpp  mdb_fixture.hpp  test_mdb_backtrace.cpp
tools/: clang_tidy.sh
(+44 files in other folders)
